--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <img src="./images/default-logo.png">
         </div>
         
-        <div class="nav-icon">
+        <!-- <div class="nav-icon">
             <i class="fa-solid fa-bars"></i>
-        </div>
+        </div> -->
 
     </div>
 
